--- a/clocl.html
+++ b/clocl.html
@@ -357,8 +357,9 @@
         </section>
         
         <footer>
-            <p>星野项目 &copy; 2023 - 让游戏体验更美好</p>
+            <p>星野项目 &copy; - 让游戏体验更美好</p>
         </footer>
     </div>
 </body>
+
 </html>
